[project]
name = "practical01"
version = "0.1.0"
description = "CSSE6400 Week 1 Practical - Flask Todo API"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false